--- a/assets/style.css
+++ b/assets/style.css
@@ -10,3 +10,17 @@ img {
   text-decoration: none;
   color: grey;
 }
+.linl-tel{
+  border-left: solid 1px;
+  border-right: solid 1px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+h2 {
+  border-top: solid 2px;
+  border-bottom: solid 1px;
+}
+.info_post {
+      font-weight:normal;
+}
